traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: not found: value GetY
    while (6!=getX() && getMondeHauteur-1!= GetY()){
                                            ^