traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x:Int = 0
  
    while (6!=getX() && getMondeHauteur-1!= GetY()){
      
      
  ecritMessage(x)
 x+=1
    setPos(x/getMondeHauteur(),x%getMondeLargeur())
    }
     
      
  
  x+=1
  ecritMessage(x)
}